# ironpad

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT.md  Makefile.toml  MegaPrd.md  README.md  package.json  playwright.config.ts
.github/workflows/: build.yml
.mr/: PRDS.md
.mr/prds/: PRD-0001-first-pass.md
.mr/prompts/: run_task.md  run_uat_verify.md
.mr/skills/: SKILLS.md
.prds/: PRD-0002-visual-fixes.md  PRD-0003-cell-output-enhancements.md  PRD-0004-builtins-tests-refactor.md  PRD-0005-interactivity.md  PRD-0006-qol-improvements.md  PRD-0007-notebook-ux-and-shared-code.md  PRD-0008-ux-polish-theming-interactivity.md  PRD-0009-release-readiness.md
.prds/agentic-collaboration/: 0000-overview.md  0001-message-protocol.md  0002-notebook-model-abstraction.md  0003-cell-versioning.md  0004-session-and-token-management.md  0006-browser-websocket-integration.md  0008-cli-daemon.md  0009-cli-client.md  0011-repo-alignment.md
crates/ironpad-app/: Cargo.toml
crates/ironpad-app/src/: lib.rs  model.rs  server_fns.rs
crates/ironpad-app/src/compiler/: build.rs  cache.rs  diagnostics.rs  mod.rs  optimize.rs  scaffold.rs
crates/ironpad-app/src/components/: app_layout.rs  copy_button.rs  error_panel.rs  executor.rs  markdown_cell.rs  mod.rs  monaco_editor.rs  session_panel.rs  view_only_notebook.rs
crates/ironpad-app/src/notebook/: cells.rs  mod.rs  seed.rs  storage.rs
crates/ironpad-app/src/pages/: home_page.rs  mod.rs  notebook_editor.rs  public_notebook.rs  shared_notebook.rs
crates/ironpad-app/src/pages/notebook_editor/: cell_item.rs  cell_output.rs  export.rs  mod.rs  shared_deps.rs  shared_source.rs  skeleton.rs  state.rs
crates/ironpad-app/src/session/: connection.rs  mod.rs
crates/ironpad-app/src/storage/: client.rs  mod.rs
crates/ironpad-cell/: Cargo.toml
crates/ironpad-cell/src/: http.rs  lib.rs  plot.rs  ui.rs
crates/ironpad-cli/: Cargo.toml
crates/ironpad-cli/src/: daemon.rs  ipc.rs  main.rs
crates/ironpad-common/: Cargo.toml
crates/ironpad-common/src/: config.rs  lib.rs  protocol.rs  types.rs
crates/ironpad-frontend/: Cargo.toml
crates/ironpad-frontend/src/: lib.rs
crates/ironpad-server/: Cargo.toml
crates/ironpad-server/src/: config.rs  main.rs  sessions.rs  state.rs  ws.rs
docker/: Dockerfile  docker-compose.yml  warmup-Cargo.toml
public/: executor.js  storage.js
public/monaco/: bridge.js  init.js  languages.js
public/notebooks/: async-http.ironpad  charts-with-plot.ironpad  index.json  interactive-button.ironpad  interactive-widgets.ironpad  progress-bar.ironpad  shared-code.ironpad  tutorial.ironpad  welcome.ironpad  working-with-json.ironpad
style/: main.scss
tasks/: 0000-overview.md  0005-server-websocket-relay.md  0007-browser-session-ui.md  0010-integration-testing.md
tests/e2e/: execution.spec.ts  home.spec.ts  keyboard.spec.ts  notebook.spec.ts  public-notebooks.spec.ts  sanity.spec.ts  seed.spec.ts  session.spec.ts
tests/e2e/helpers/: cli.ts  session.ts
