[workspace]
resolver = "2"
members = [
    "crates/ironpad-app",
    "crates/ironpad-frontend",
    "crates/ironpad-server",
    "crates/ironpad-cell",
    "crates/ironpad-common",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

# ── Shared Dependencies ──────────────────────────────────────────────────────

[workspace.dependencies]

# Leptos ecosystem
leptos = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_axum = { version = "0.8" }

# Web server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
http = "1"

# UI components
thaw = "=0.5.0-beta"

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "2"

# Hashing
blake3 = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Identifiers and time
uuid = { version = "1", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }

# WASM interop
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
console_error_panic_hook = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Internal crates
ironpad-app = { path = "crates/ironpad-app", default-features = false }
ironpad-frontend = { path = "crates/ironpad-frontend" }
ironpad-server = { path = "crates/ironpad-server" }
ironpad-cell = { path = "crates/ironpad-cell" }
ironpad-common = { path = "crates/ironpad-common" }

# ── cargo-leptos metadata ────────────────────────────────────────────────────

[[workspace.metadata.leptos]]
name = "ironpad"
bin-package = "ironpad-server"
lib-package = "ironpad-frontend"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "tests/e2e"
browserquery = "defaults"

bin-features = []
bin-default-features = false
lib-features = []
lib-default-features = false
