[package]
name = "ironpad-app"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

thaw.workspace = true

ironpad-common = { workspace = true }

http.workspace = true
thiserror.workspace = true
anyhow = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
blake3 = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:anyhow",
    "dep:uuid",
    "dep:tokio",
    "dep:tracing",
    "dep:blake3",
]
