[package]
name = "ironpad-cell"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json = "1"
bincode = { workspace = true, features = ["serde"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = ["console"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
