[package]
name = "ironpad-cell"
version = "0.1.0"
edition = "2021"

# NOTE: ironpad-cell is injected as a path dependency into standalone
# micro-crates that live outside the workspace, so every dependency here
# must use explicit versions (not `workspace = true`).

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = { version = "2", features = ["serde"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"

plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
