[package]
name = "ironpad-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ironpad-cli"
path = "src/main.rs"

[dependencies]
ironpad-common = { workspace = true }

tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
tokio-tungstenite.workspace = true
libc = "0.2"
anyhow.workspace = true
