[package]
name = "ironpad-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ironpad-app = { workspace = true, default-features = false, features = ["hydrate"] }
leptos = { workspace = true, features = ["hydrate"] }

console_error_panic_hook.workspace = true
wasm-bindgen.workspace = true
