[package]
name = "ironpad-server"
version = "0.1.0"
edition = "2021"

[dependencies]
ironpad-app = { workspace = true, default-features = false, features = ["ssr"] }
ironpad-common = { workspace = true }

leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true

axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true

clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
blake3.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
bincode.workspace = true
anyhow.workspace = true
